--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,18 @@ h2 {
 h3 {
   margin-bottom: 0;
 }
+main > div {
+  display: flex;
+  gap: 40px;
+}
+
+.column-left {
+  flex: 1;
+}
+
+.column-right {
+  width: 350px;
+}
 
 .top-header {
   display: flex;
@@ -103,18 +115,19 @@ h3 {
 .menu {
   display: flex;
   flex-flow: wrap;
+  justify-content: space-between;
 }
 
 .item {
-  /* border: 1px solid red; */
   display: flex;
-  width: 33%;
+  justify-content: space-between;
+  width: 48%;
   background-color: white;
   border-radius: 10px;
   height: 200px;
   text-align: left;
   padding-left: 10px;
-  margin-right: 20px;
+  box-sizing: border-box;
   margin-bottom: 20px;
 }
 
@@ -138,4 +151,42 @@ h3 {
   overflow: hidden;
   text-overflow: ellipsis;
   margin-right: 15px;
+}
+
+.price {
+  display: flex;
+}
+
+.star {
+  margin-left: 20px;
+  color: orange;
+}
+
+.panier {
+  margin-top: 30px;
+
+  background-color: white;
+  border-radius: 10px;
+}
+
+.panier button {
+  width: 320px;
+  margin-top: 30px;
+  background-color: #bac3c3;
+  color: #8e9c9d;
+}
+
+.empty {
+  padding: 50px 0;
+  color: #868a8a;
+}
+
+.list {
+  border-bottom: #868a8a 1px solid;
+}
+
+.list p {
+  font-size: 16px;
+  padding: 5px 0;
+  margin: 5px;
 }
